--- a/front-end/src/containers/Menus/components/MenuFilter/styles.scss
+++ b/front-end/src/containers/Menus/components/MenuFilter/styles.scss
@@ -35,10 +35,10 @@
     background-image: url('../../../../assets/images/menu_filter_popup.svg');
     background-size: cover;
     background-repeat: no-repeat;
-    width: 225px;
-    height: 436px;
+    width: 191px;
+    height: 386px;
     margin-left: -40px;
-    padding: 30px 2px 0 7px;
+    padding: 10px 0px 30px 7px;
     animation-name: dropdown-animation;
     animation-duration: 0.5s;
     transform-origin: left top;
@@ -47,20 +47,20 @@
 
     .div-menu {
       color: $text-light-gray;
-      margin-top: 10px;
-      padding: 0 10px;
-      height: 52px;
+      margin-top: 15px;
+      padding: 0 15px 0 6px;
+      height: 47px;
       font-size: $mobile-regular-font-size;
       display: flex;
       align-items: center;
       justify-content: space-between;
 
       .img-icon {
-        width: 50px;
+        width: 42px;
       }
 
       .img-check {
-        height: 10px;
+        width: 10px;
       }
 
       &:hover {
@@ -70,12 +70,12 @@
     }
 
     .div-menu-clear {
-      font-size: $mobile-regular-font-size;
+      font-size: $mobile-regular-font-size - 2;
       text-decoration: underline;
       color: $text-light-gray;
       text-align: right;
-      margin-top: 25px;
-      margin-right: 20px;
+      margin-top: 15px;
+      margin-right: 24px;
     }
   }
 
@@ -88,27 +88,6 @@
 
     .dropdown__content {
       margin-left: -20px;
-    }
-  }
-
-  @media (max-width: 414px) {
-    .dropdown__content {
-      width: 160px;
-      height: 309px;
-      margin-left: -12px;
-      padding-top: 20px;
-
-      .div-menu {
-        height: 37px;
-        font-size: 12px;
-        padding-left: 10px;
-        padding-right: 20px;
-      }
-
-      .div-menu-clear {
-        font-size: 12px;
-        margin-top: 10px;
-      }
     }
   }
 }
