--- a/front-end/src/containers/Modals/MenuModal/component/ExpandableDescription/styles.scss
+++ b/front-end/src/containers/Modals/MenuModal/component/ExpandableDescription/styles.scss
@@ -2,6 +2,7 @@
 
 .div-description-text {
   opacity: 0.58;
+  font-family: 'OpenSans-Regular';
   font-size: $mobile-regular-font-size;
   line-height: 25px;
   color: black;
