--- a/front-end/src/containers/Authentication/components/ForgotPasswordForm/styles.scss
+++ b/front-end/src/containers/Authentication/components/ForgotPasswordForm/styles.scss
@@ -2,7 +2,7 @@
 
 .forgot-password-form {
   background-color: white;
-  border: 1px solid #D2D2D2;
+  border: 1px solid #B7CBB8;
   color: $text-light-gray;
   box-shadow: $shadow-primary;
 
@@ -10,7 +10,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    background: $extra-light-green;
     height: 100px;
 
     .forgot-password-form-header-title {
@@ -29,39 +28,36 @@
     align-items: center;
 
     .forgot-password-form-instruction {
-      font-size: $mobile-regular-font-size;
+      font-size: $mobile-regular-font-size + 1;
       font-family: 'OpenSans-Regular';
-      color: $text-light-gray;
+      color: #535353;
       width: 60%;
-      margin-top: 20px;
     }
 
     .forgot-password-form-instruction-bold {
       font-family: 'OpenSans-Bold';
-      font-size: $mobile-regular-font-size;
+      font-size: $mobile-regular-font-size + 1;
       color: #4B4B4B;
       width: 60%;
-      margin-top: 20px;
       text-align: center;
     }
 
     .forgot-password-help-link {
-      font-size: $mobile-regular-font-size;
+      font-size: $mobile-regular-font-size + 1;
       font-family: 'OpenSans-Regular';
       text-align: center;
       width: 60%;
-      margin-top: 20px;
       color: #535353;
+      margin-top: 20px;
 
       a {
         color: $green-secondary;
-        text-decoration: underline;
       }
     }
 
     .forgot-password-form-input {
       margin-top: 20px;
-      padding: 0 40px;
+      padding: 0 28px;
       width: 100%;
       
       span {
@@ -71,7 +67,7 @@
 
       input {
         width: 100%;
-        height: 53px;
+        height: 56px;
         margin-top: 5px;
         padding: 0 10px;
         border: 1px solid $light-green-primary;
@@ -86,15 +82,16 @@
     }
 
     .btn-reset {
-      margin: 20px 40px 0;
-      width: calc(100% - 80px);
+      margin: 15px 28px 0;
+      width: calc(100% - 56px);
       height: 56px;
       border-radius: 4px;
       font-size: $mobile-regular-font-size;
+      font-family: 'Montserrat-Medium';
     }
 
     span {
-      width: calc(100% - 80px);
+      width: calc(100% - 56px);
       margin-top: 10px;
     }
   }
@@ -102,10 +99,9 @@
   .forgot-password-form-links {
     display: flex;
     align-items: center;
-    margin: 40px 0;
+    margin: 30px 0;
 
     a {
-      font-family: 'Montserrat-Medium';
       font-size: $mobile-regular-font-size;
       color: $text-light-gray;
       text-decoration: underline;
@@ -113,7 +109,7 @@
 
     .div-separator {
       width: 1px;
-      height: 20px;
+      height: 14px;
       background-color: #707070;
       margin: 0 20px;
     }
