--- a/front-end/src/containers/Settings/EditProfile/styles.scss
+++ b/front-end/src/containers/Settings/EditProfile/styles.scss
@@ -7,7 +7,7 @@
     width: 380px;
     margin: 0 auto;
     padding: 35px 60px;
-    box-shadow: $shadow-primary;
+    box-shadow: 0 0 3px rgba(0,0,0,0.16);
 
     .div-title {
       color: #4BCC25;
