--- a/front-end/src/containers/SideCart/components/SideCartSummary/styles.scss
+++ b/front-end/src/containers/SideCart/components/SideCartSummary/styles.scss
@@ -63,8 +63,10 @@
   .btn-checkout {
     width: 100%;
     height: 52px;
-    font-size: $small-font-size;
-    border-radius: 8px;
+    font-size: $mobile-regular-font-size + 1;
+    font-family: 'Montserrat-Medium';
+    border-radius: 4px;
+    border: .75px solid #3E8541;
   }
 
   .side-cart-summary-bottom-link {
