--- a/front-end/src/containers/Authentication/components/AuthForm/styles.scss
+++ b/front-end/src/containers/Authentication/components/AuthForm/styles.scss
@@ -2,10 +2,10 @@
 
 .auth-form {
   background-color: white;
-  box-shadow: $shadow-primary;
-  padding: 40px 28px;
+  box-shadow: 0 0 4px rgba(0,0,0,0.16);
+  padding: 40px 40px 20px;
   color: $text-light-gray;
-  border: 1px solid #B7CBB8;
+  border: .5px solid #B7CBB8C0;
 
   .span-link {
     color: $green-secondary;
@@ -13,25 +13,7 @@
     cursor: pointer;
   }
 
-  .auth-form-header-normal {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 20px;
-
-    .auth-form-title {
-      font-size: 29px;
-      font-family: 'Montserrat-SemiBold';
-      color: #4B4B4B;
-    }
-
-    .auth-form-switch {
-      font-size: $mobile-regular-font-size + 1;
-    }
-  }
-
-  .auth-form-header-green {
+  .auth-form-header {
     margin: -30px -30px 0 -30px;
     height: 60px;
     line-height: 60px;
@@ -57,7 +39,7 @@
       input {
         width: 100%;
         height: 52px;
-        margin-top: 10px;
+        margin-top: 15px;
         padding: 0 10px;
         border: 1px solid $light-green-primary;
         border-radius: 4px;
@@ -67,19 +49,6 @@
 
       input:focus {
         border: 1px solid $green-primary;
-      }
-    }
-
-    .auth-form-double-inputs {
-      display: flex;
-
-      #input_firstname {
-        margin-right: 9px;
-        width: 50%;
-      }
-      #input_lastname {
-        margin-left: 9px;
-        width: 50%;
       }
     }
 
@@ -150,7 +119,7 @@
     font-size: $mobile-regular-font-size;
     font-family: 'OpenSans-Regular';
 
-    .auth-form-footer-signup {
+    .auth-form-footer-signup, .auth-form-footer-login {
       margin-top: 20px;
     }
   }
@@ -233,9 +202,13 @@
       margin-top: 30px;
       font-size: $small-font-size;
 
-      .auth-form-footer-signup {
+      .auth-form-footer-signup, .auth-form-footer-login {
         font-size: $small-font-size;
       }
     }
   }
+}
+
+.auth-form-transparent {
+  background-color: transparent;
 }
