--- a/front-end/src/components/MenuDatePicker/styles.scss
+++ b/front-end/src/components/MenuDatePicker/styles.scss
@@ -46,7 +46,31 @@
         height: 100%;
         display: flex;
         flex-direction: column;
-        overflow-y: scroll;
+        overflow-y: hidden;
+        
+        &:hover {
+          overflow-y: scroll;
+        }
+  
+        /* width */
+        &::-webkit-scrollbar {
+          width: 10px;
+        }
+  
+        /* Track */
+        &::-webkit-scrollbar-track {
+          background: #F5F5F5; 
+        }
+  
+        /* Handle */
+        &::-webkit-scrollbar-thumb {
+          background: #747474; 
+          border-radius: 100px;
+  
+          &:hover {
+            background: #555; 
+          }
+        }
   
         .div-date-menu {
           height: 42px;
