--- a/front-end/src/containers/Root/components/Footer/styles.scss
+++ b/front-end/src/containers/Root/components/Footer/styles.scss
@@ -91,6 +91,7 @@
         }
   
         #facebook {
+          background-image: url('../../../../assets/images/facebook_highlight.svg');
           background-image: url('../../../../assets/images/facebook.svg');
   
           &:hover {
@@ -99,6 +100,7 @@
         }
   
         #twitter {
+          background-image: url('../../../../assets/images/twitter_highlight.svg');
           background-image: url('../../../../assets/images/twitter.svg');
   
           &:hover {
@@ -107,6 +109,7 @@
         }
   
         #instagram {
+          background-image: url('../../../../assets/images/instagram_highlight.svg');
           background-image: url('../../../../assets/images/instagram.svg');
   
           &:hover {
