--- a/front-end/src/containers/Root/components/DropdownFooter/styles.scss
+++ b/front-end/src/containers/Root/components/DropdownFooter/styles.scss
@@ -30,6 +30,7 @@
       }
 
       #facebook {
+        background-image: url('../../../../assets/images/facebook_highlight.svg');
         background-image: url('../../../../assets/images/facebook.svg');
 
         &:hover {
@@ -38,6 +39,7 @@
       }
 
       #twitter {
+        background-image: url('../../../../assets/images/twitter_highlight.svg');
         background-image: url('../../../../assets/images/twitter.svg');
 
         &:hover {
@@ -46,6 +48,7 @@
       }
 
       #instagram {
+        background-image: url('../../../../assets/images/instagram_highlight.svg');
         background-image: url('../../../../assets/images/instagram.svg');
 
         &:hover {
