[FE] various styling fixes. bug fixes

--- a/front-end/src/containers/AboutUs/styles.scss
+++ b/front-end/src/containers/AboutUs/styles.scss
@@ -38,7 +38,7 @@
 
   .about-us-description-single {
     font-size: $small-font-size;
-    font-family: 'Lato-Bold';
+    font-family: 'Lato-BoldItalic';
     padding: 0 40px;
     color: #333333;
   }
