--- a/front-end/src/styles/_fonts.scss
+++ b/front-end/src/styles/_fonts.scss
@@ -49,6 +49,11 @@
 }
 
 @font-face {
+  font-family: 'Lato-BoldItalic';
+  src: url('../assets/fonts/Lato/Lato-BoldItalic.ttf');
+}
+
+@font-face {
   font-family: 'Inkfree';
   src: url('../assets/fonts/Inky/Inkfree.ttf');
 }
