--- a/front-end/src/containers/SideCart/styles.scss
+++ b/front-end/src/containers/SideCart/styles.scss
@@ -10,25 +10,17 @@
     border-bottom: 0.5px solid #70707080;
     display: flex;
     align-items: center;
-    justify-content: space-between;
 
-    .div-side-cart-header-left {
-      display: flex;
-      align-items: center;
-      margin-left: 40px;
-
-      .div-side-cart-header-title {
-        margin-left: 20px;
-        font-family: 'Montserrat-Medium';
-        color: $text-light-gray;
-      }
+    .div-cart {
+      margin-left: 67px;
     }
 
-    .div-side-cart-header-right {
-      margin-right: 20px;
-      img {
-        height: 16px;
-      }
+    .div-side-cart-header-title {
+      position: absolute;
+      width: 100%;
+      font-family: 'Brandon-Medium';
+      color: $text-light-gray;
+      text-align: center;
     }
   }
 
@@ -78,16 +70,11 @@
     .div-side-cart-header {
       height: 60px;
 
-      .div-side-cart-header-left {
+      .div-side-cart-header-title {
+        font-size: $small-font-size;
         flex-grow: 1;
-        margin-left: 20px;
-
-        .div-side-cart-header-title {
-          font-size: $small-font-size;
-          flex-grow: 1;
-          text-align: center;
-          margin-left: unset;
-        }
+        text-align: center;
+        margin-left: unset;
       }
     }
 
