[FE] revamp career pages / modals

--- a/front-end/src/containers/Career/CareerList/styles.scss
+++ b/front-end/src/containers/Career/CareerList/styles.scss
@@ -35,7 +35,7 @@
     max-width: 860px;
     
     .career-filters {
-      margin-top: 40px;
+      margin-top: 60px;
     }
 
     .div-career-section {
@@ -51,7 +51,7 @@
         width: 170px;
         height: 1px;
         background-color: rgba(35,34,34, 0.85);
-        margin: 50px 0;
+        margin: 25px 0 55px;
       }
 
       .job {
