--- a/front-end/src/containers/Career/components/CareerSearchBar/styles.scss
+++ b/front-end/src/containers/Career/components/CareerSearchBar/styles.scss
@@ -22,7 +22,7 @@
     width: 169px;
     border-radius: 4px;
     border: .75px solid #3E8541;
-    font-family: 'Montserrat-Bold';
+    font-family: 'Montserrat-Medium';
     font-size: $small-font-size - 1;
   }
 }
