--- a/front-end/src/containers/Career/components/Job/styles.scss
+++ b/front-end/src/containers/Career/components/Job/styles.scss
@@ -16,12 +16,12 @@
 
     .job-location {
       margin-right: 100px;
-      font-size: $mobile-regular-font-size - 1;
+      font-size: $mobile-regular-font-size + 1;
     }
 
     .job-time {
       opacity: 0.5;
-      font-size: $mobile-regular-font-size - 1;
+      font-size: $mobile-regular-font-size + 1;
     }
   }
 
@@ -31,6 +31,5 @@
     font-family: 'Montserrat-Medium';
     font-size: $mobile-regular-font-size - 1;
     border-radius: 4px;
-    box-shadow: $shadow-primary;
   }
 }
