--- a/front-end/src/containers/Authentication/components/FacebookButton/styles.scss
+++ b/front-end/src/containers/Authentication/components/FacebookButton/styles.scss
@@ -9,6 +9,7 @@
   line-height: 53px;
   text-align: center;
   color: $green-secondary;
+  background-color: white;
   cursor: pointer;
   font-size: $mobile-regular-font-size;
   position: relative;
