--- a/front-end/src/containers/Modals/MenuModal/component/ExpandableDescription/styles.scss
+++ b/front-end/src/containers/Modals/MenuModal/component/ExpandableDescription/styles.scss
@@ -3,8 +3,8 @@
 .div-description-text {
   opacity: 0.58;
   font-family: 'OpenSans-Regular';
-  font-size: $mobile-regular-font-size;
-  line-height: 25px;
+  font-size: $mobile-regular-font-size + 1;
+  line-height: 20px;
   color: black;
   opacity: 0.55;
 
