--- a/front-end/src/containers/Root/components/SimplifiedFooter/styles.scss
+++ b/front-end/src/containers/Root/components/SimplifiedFooter/styles.scss
@@ -4,42 +4,42 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 90px;
+  height: 73px;
   background-color: rgb(33,33,33);
 
   .simplified-footer-left {
-    margin-left: 60px;
+    margin-left: 70px;
     display: flex;
     align-items: center;
 
     .img-logo {
-      height: 42px;
+      height: 31.4px;
     }
 
     .simplified-footer-links {
-      margin-left: 170px;
+      margin-left: 155px;
       display: flex;
       align-items: center;
 
       .link {
         color: #AFAFAF;
-        font-size: $small-font-size;
+        font-size: $mobile-regular-font-size;
       }
 
       .separator {
         height: 10px;
         width: 1px;
         background-color: white;
-        margin: 0 20px;
+        margin: 0 15px;
       }
     }    
   }
 
   .simplified-footer-right {
-    margin-right: 75px;
+    margin-right: 65px;
 
     .img-globe {
-      height: 25px;
+      height: 18px;
     }
   }
 }
