--- a/front-end/src/containers/Home/styles.scss
+++ b/front-end/src/containers/Home/styles.scss
@@ -113,6 +113,7 @@
 
   .div-feedback-container {
     position: relative;
+    overflow: hidden;
 
     .div-section-title {
       font-family: 'Montserrat-Regular';
