--- a/front-end/src/containers/Modals/InvitationModal/styles.scss
+++ b/front-end/src/containers/Modals/InvitationModal/styles.scss
@@ -73,6 +73,8 @@
     .invitation-modal-description {
       width: 60%;
       font-size: $mobile-regular-font-size + 1;
+      font-family: 'OpenSans-Regular';
+      line-height: 20px;
       color: $text-light-gray;
       margin-top: 10px;
       text-align: center;
